--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
   "name": "advo-package-proto",
   "version": "0.1.0",
-  "private": true,
+  "main": "./dist/advo-proto.common.js",
+  "files": [
+    "dist/*",
+    "src/*",
+    "public/*",
+    "*.json",
+    "*.js"
+  ],
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "build-bundle": "vue-cli-service build --target lib --name advo-proto ./src/components/global.js",
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
